# abstract-automata

./: .gitignore  README.md  abstract-automata.cabal  abstract-automata.nix  release.nix  shell.nix
scripts/: package.sh
src/: Main.hs
src/App/: Alphabet.hs  Control.hs  Simulation.hs  Transition.hs
src/App/Storage/: Stack.hs  Storage.hs  Tape.hs
