cabal-version:       >=1.10

name:                abstract-automata
version:             0.1.0.0
synopsis:            Simulate automata.
description:         Simulacra Turing Machines and automata.
bug-reports:         https://github.com/fivegrant/abstract-automata/issues
license:             GPL
license-file:        LICENSE
author:              Five Grant (5@fivegrant.com)
maintainer:          Five Grant (5@fivegrant.com)
copyright:           Copyright 2020, Five Grant, All rights reserved.
category:            Mathematics
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

executable abstract-automata
  main-is:             Main.hs
  other-modules:       App.Control, App.Alphabet
  -- other-extensions:
  build-depends:       base, containers, ansi-terminal
  hs-source-dirs:      src
  default-language:    Haskell2010
